@@ -17,6 +17,7 @@ linotp (3.1~0dev-0) experimental; urgency=low
   * motp tokens can now be used in challenge response mode
   * adjust yubico token config text which clarifies that a dedicated
     api key from yubico is required.
+  * display error message in Manage UI if token import fails
 
  -- KeyIdentity LinOTP Packaging <linotp@keyidentity.com>  Thu, 12 Nov 2020 17:48:51 +0200
 
